[project]
name = "warranty-analysis-dashboard"
version = "0.1.0"
description = ""
authors = [
    {name = "Sam",email = "sammeehansam@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "streamlit (>=1.45.1,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "plotly (>=6.1.2,<7.0.0)",
    "numpy (>=2.3.0,<3.0.0)"
]

[tool.poetry]
packages = [
    { include = "app.py" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
